chore: remove wrong style of width

--- a/priv/scenarios.eex
+++ b/priv/scenarios.eex
@@ -5,7 +5,7 @@
   scenarios = scenarios(suite, input)
   units = units(scenarios, suite)
 %>
-<table style="width: 1%">
+<table>
   <tr>
     <th>Name</th>
     <th style="text-align: right">IPS</th>
