--- a/priv/configuration.eex
+++ b/priv/configuration.eex
@@ -3,9 +3,9 @@
 
   configuration = suite.configuration
 %>
-<table style="width: 1%">
+<table>
   <tr>
-    <th style="width: 1%">:time</th>
+    <th>:time</th>
     <td style="white-space: nowrap"><%= Duration.format(configuration.time) %></td>
   </tr><tr>
     <th>:parallel</th>
