--- a/priv/reduction_counts.eex
+++ b/priv/reduction_counts.eex
@@ -18,7 +18,7 @@
     }
   } = reference
 %>
-<table style="width: 1%">
+<table>
   <tr>
     <th>Name</th>
     <th style="text-align: right">Average</th>
